feat: added monitoring to feedservice, updated docs and created new unit tests
