# FeedService/docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Feed Service of AstreiaGram, provides feed related funcionality for the application.",
+        "description": "Feed Service do AstreiaGram, entrega funcionalidades relacionadas ao feed para a aplicação.",
         "title": "AstreiaGram Feed Service API",
         "contact": {},
         "version": "1.0"
@@ -9,17 +9,17 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/feed/{userId}": {
+        "/api/feed/{userId}": {
             "get": {
-                "description": "Returns posts from a feed of some user.",
+                "description": "Retorna posts de um feed de algum usuário.",
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Searches for a feed.",
+                "summary": "Procura por um feed.",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "ID of the user",
+                        "description": "ID do usuário",
                         "name": "userId",
                         "in": "path",
                         "required": true
@@ -27,14 +27,14 @@
                     {
                         "type": "integer",
                         "default": 1,
-                        "description": "Number of the page",
+                        "description": "Número da página",
                         "name": "page",
                         "in": "query"
                     },
                     {
                         "type": "integer",
                         "default": 50,
-                        "description": "Number of post per page",
+                        "description": "Número de posts por página",
                         "name": "limit",
                         "in": "query"
                     }
@@ -83,8 +83,34 @@
                 "posts": {
                     "type": "array",
                     "items": {
-                        "type": "string"
+                        "$ref": "#/definitions/dto.PostResponse"
                     }
+                },
+                "userId": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.PostResponse": {
+            "type": "object",
+            "properties": {
+                "caption": {
+                    "type": "string"
+                },
+                "commentCount": {
+                    "type": "integer"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "imageUrl": {
+                    "type": "string"
+                },
+                "likeCount": {
+                    "type": "integer"
                 },
                 "userId": {
                     "type": "string"
